other/restrict-pod-count-per-node/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-pod-count
policies:
- ../restrict-pod-count-per-node.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: restrict-pod-count
  resources:
  - myapp-pod
  result: fail
  rule: restrict-pod-count
variables: values.yaml
